@@ -6,6 +6,8 @@
    	* device/lib/mos6502/_strcpy.s,
   	  device/lib/mos6502/_strcmp.s
   	  use DPTR instead of temp
+   	* device/lib/mos6502/_strlen.s
+	  implement strlen in asm
   	
 2023-12-05 Philipp Klaus Krause <philipp@colecovision.eu>
 
